--- a/index.html
+++ b/index.html
@@ -1,21 +1,96 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jane - ZZZ 3D 模型</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>張文碩的 3D 測試</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #1e1e1e;
+      color: #f0f0f0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    header {
+      background-color: #444;
+      padding: 1rem;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    .container {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    select {
+      padding: 0.5rem;
+      font-size: 1rem;
+      background-color: #333;
+      color: white;
+      border: 1px solid #888;
+      border-radius: 4px;
+      margin-bottom: 1.5rem;
+    }
+
+    .embed-box {
+      background-color: #2c2c2c;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      overflow: hidden;
+    }
+
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+    }
+
+    @media (max-width: 768px) {
+      iframe {
+        height: 400px;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <div class="sketchfab-embed-wrapper">
-        <iframe title="Jane - ZZZ" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" 
-            allow="autoplay; fullscreen; xr-spatial-tracking" 
-            xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
-            src="https://sketchfab.com/models/c4200626e62540b289cd74de3bafb29d/embed" 
-            width="800" height="600">
-        </iframe>
+  <header>張文碩的 3DTest</header>
+
+  <div class="container">
+    <label for="modelSelect">選擇模型展示：</label>
+    <select id="modelSelect">
+      <option value="jane">Jane - ZZZ</option>
+      <option value="cup">Homework - Cup</option>
+    </select>
+
+    <div class="embed-box" id="viewer">
+      <!-- 初始模型：Jane -->
+      <iframe id="modelFrame" 
+              src="https://sketchfab.com/models/c4200626e62540b289cd74de3bafb29d/embed"
+              allow="autoplay; fullscreen; xr-spatial-tracking"
+              xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share>
+      </iframe>
     </div>
+  </div>
+
+  <script>
+    const modelMap = {
+      jane: "https://sketchfab.com/models/c4200626e62540b289cd74de3bafb29d/embed",
+      cup: "https://sketchfab.com/models/9b98e273890c4f6f956094ad555b21eb/embed"
+    };
+
+    const select = document.getElementById("modelSelect");
+    const frame = document.getElementById("modelFrame");
+
+    select.addEventListener("change", function () {
+      const selected = select.value;
+      frame.src = modelMap[selected];
+    });
+  </script>
 
 </body>
-<div class="sketchfab-embed-wrapper"> <iframe title="Homework--cup" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/9b98e273890c4f6f956094ad555b21eb/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/homework-cup-9b98e273890c4f6f956094ad555b21eb?utm_medium=embed&utm_campaign=share-popup&utm_content=9b98e273890c4f6f956094ad555b21eb" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Homework--cup </a> by <a href="https://sketchfab.com/chang96977?utm_medium=embed&utm_campaign=share-popup&utm_content=9b98e273890c4f6f956094ad555b21eb" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> chang96977 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=9b98e273890c4f6f956094ad555b21eb" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
 </html>
