--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
       border: none;
     }
 
+    p {
+      font-size: 13px;
+      font-weight: normal;
+      margin: 5px;
+      color: #4A4A4A;
+    }
+
+    a {
+      font-weight: bold;
+      color: #1CAAD9;
+    }
+
     @media (max-width: 768px) {
       iframe {
         height: 400px;
@@ -65,6 +77,7 @@
     <select id="modelSelect">
       <option value="jane">Jane - ZZZ</option>
       <option value="cup">Homework - Cup</option>
+      <option value="stickman">Stickman Body - MIXAMO RIG 2025</option>
     </select>
 
     <div class="embed-box" id="viewer">
@@ -75,20 +88,53 @@
               xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share>
       </iframe>
     </div>
+
+    <div id="stickmanDescription" style="display: none;">
+      <div class="embed-box">
+        <iframe title="Stickman Body - MIXAMO RIG 2025"
+                frameborder="0"
+                allowfullscreen
+                mozallowfullscreen="true"
+                webkitallowfullscreen="true"
+                allow="autoplay; fullscreen; xr-spatial-tracking"
+                src="https://sketchfab.com/models/0a00e15ca71d400e905e6f4d5a862fb0/embed">
+        </iframe>
+      </div>
+      <p>
+        <a href="https://sketchfab.com/3d-models/stickman-body-mixamo-rig-2025-0a00e15ca71d400e905e6f4d5a862fb0?utm_medium=embed&utm_campaign=share-popup&utm_content=0a00e15ca71d400e905e6f4d5a862fb0" target="_blank" rel="nofollow">
+          Stickman Body - MIXAMO RIG 2025
+        </a> by 
+        <a href="https://sketchfab.com/robloxdevdesign1?utm_medium=embed&utm_campaign=share-popup&utm_content=0a00e15ca71d400e905e6f4d5a862fb0" target="_blank" rel="nofollow">
+          Robloxian Developer Designer
+        </a> on 
+        <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=0a00e15ca71d400e905e6f4d5a862fb0" target="_blank" rel="nofollow">
+          Sketchfab
+        </a>
+      </p>
+    </div>
   </div>
 
   <script>
     const modelMap = {
       jane: "https://sketchfab.com/models/c4200626e62540b289cd74de3bafb29d/embed",
-      cup: "https://sketchfab.com/models/9b98e273890c4f6f956094ad555b21eb/embed"
+      cup: "https://sketchfab.com/models/9b98e273890c4f6f956094ad555b21eb/embed",
+      stickman: "https://sketchfab.com/models/0a00e15ca71d400e905e6f4d5a862fb0/embed"
     };
 
     const select = document.getElementById("modelSelect");
     const frame = document.getElementById("modelFrame");
+    const stickmanDescription = document.getElementById("stickmanDescription");
 
     select.addEventListener("change", function () {
       const selected = select.value;
       frame.src = modelMap[selected];
+
+      // 顯示Stickman描述區塊
+      if (selected === "stickman") {
+        stickmanDescription.style.display = "block";
+      } else {
+        stickmanDescription.style.display = "none";
+      }
     });
   </script>
 
